<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.FlightBookingSystem</groupId>
  <artifactId>APITesting</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>APITesting</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>

	<dependency>
	<groupId>io.rest-assured</groupId>
	<artifactId>rest-assured</artifactId>
	<version>5.4.0</version>
	</dependency>
	
	<dependency>
    <groupId>io.rest-assured</groupId>
    <artifactId>json-schema-validator</artifactId>
    <version>5.4.0</version>
    <scope>test</scope>
	</dependency>

	
	<dependency>
	<groupId>org.testng</groupId>
	<artifactId>testng</artifactId>
	<version>7.10.2</version>
	</dependency>
	
	<dependency>
	    <groupId>com.aventstack</groupId>
	    <artifactId>extentreports</artifactId>
	    <version>5.0.9</version>
	    <scope>test</scope>
	</dependency>
	
	<dependency>
	    <groupId>org.projectlombok</groupId>
	    <artifactId>lombok</artifactId>
	    <version>1.18.24</version> <!-- Use the latest stable Lombok version -->
	    <scope>provided</scope>
	</dependency>



  </dependencies>
  
	<build>
	    <plugins>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-compiler-plugin</artifactId>
	            <version>3.11.0</version>
	            <configuration>
	                <source>11</source> <!-- or your JDK version -->
	                <target>11</target>
	                <compilerArgs>
	                    <arg>--add-exports</arg>
	                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
	                </compilerArgs>
	            </configuration>
	        </plugin>
	    </plugins>
</build>


</project>
